[package]
name = "srt-04-bug"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.tokio-stream]
features = ["sync"]
version = "0.1"

[dependencies]
bytes = "1"
env_logger = "0.10.0"
log = "0.4.14"
srt-tokio = "0.4.1"
futures = "0.3.28"
